tests/NormalTests/paczka1/small_fuzzy/43947008.err
Error in line 3: S225 A908 5,7
Error in line 10: ?ny$zocgO
Error in line 6: 9B6TY5O0on S22 68,3
